@@ -12,7 +12,7 @@ CGI::Tiny - Common Gateway Interface, with no frills
   use CGI::Tiny;
 
   cgi {
-    my ($cgi) = @_;
+    my $cgi = $_;
     $cgi->set_error_handler(sub {
       my ($cgi, $error) = @_;
       warn $error;
@@ -84,14 +84,14 @@ incompatibly if needed.
 CGI::Tiny's interface is a regular function called C<cgi> exported by default.
 
   cgi {
-    my ($cgi) = @_;
+    my $cgi = $_;
     # set up error handling on $cgi
     # inspect request data via $cgi
     # set response headers if needed via $cgi
     # render response data with $cgi->render
   };
 
-The code block is immediately run and passed a CGI::Tiny object, which
+The code block is immediately run with C<$_> set to a CGI::Tiny object, which
 L</"METHODS"> can be called on to read request information and render a
 response.
 
@@ -134,7 +134,7 @@ L<Text::Xslate> is an efficient template engine designed for HTML/XML.
   use Data::Section::Simple 'get_data_section';
 
   cgi {
-    my ($cgi) = @_;
+    my $cgi = $_;
     my $foo = $cgi->query_param('foo');
     my $tx = Text::Xslate->new(path => ['templates'], cache => 0);
 
@@ -163,7 +163,7 @@ toolkit.
   use Mojo::Loader 'data_section';
 
   cgi {
-    my ($cgi) = @_;
+    my $cgi = $_;
     my $foo = $cgi->query_param('foo');
     my $mt = Mojo::Template->new(auto_escape => 1, vars => 1);
 
@@ -212,7 +212,7 @@ name).
   );
 
   cgi {
-    my ($cgi) = @_;
+    my $cgi = $_;
 
     my $routes = Routes::Tiny->new;
     # /script.cgi/foo
